Routing functionality added
ng-route library included in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 <script type="text/javascript" src="lib/angular.js"></script>
+<script type="text/javascript" src="lib/angular-route.min.js"></script>
 <script type="text/javascript" src="js/tabNavigation.js"></script>
 <link rel="stylesheet" href="css/tabNavigation.css" />
 <body ng-app="tabnav" ng-controller="tabNavController" ng-init="retainNavState()">
